# FT-C600-Universal-Protocol

./: .gitignore  LICENSE  README.md  llms.txt
definitions/: barcode.json  file_transfer.json  image_capture.json  imaging.json  system.json
examples/cpp_mfc_app/: mfc_device_ctrl.cpp
examples/cpp_qt_app/: dual_transport.cpp
examples/python_gi5_sim/: data_parser.py
examples/ts_react_frontend/: api_client.ts
generators/: gen_protocol.py
tests/: test_definitions.py
transports/cpp/: CMakeLists.txt  endian_utils.h
transports/rtsp_onvif/: mapping.json
transports/uvc_xu/: mapping.json
